# site

./: README.md  app.py  functions.py  pyproject.toml  requirements.txt  vercel.json
blueprints/: countries.py  profile.py  settings.py  valutes.py
static/css/: base.css
static/css/countries/: countries-m.css  countries.css  country-m.css  country.css
static/css/map/: map.css
static/css/markdown/: markdown.css
static/css/profile/: country-m.css  country.css  edit-country-m.css  edit-valute-m.css  edit-valute.css  profile-m.css  profile.css
static/css/specific/: error.css
static/css/themes/: coffee.css  dark.css  light.css  tea-dark.css  tea.css
static/css/valutes/: valute-m.css  valute.css  valutes-m.css  valutes.css
static/js/: base.js  edit-country.js  profile.js  ratios.js  search.js
templates/: base.html
templates/countries/: countries-m.html  countries.html  country-m.html  country.html
templates/map/: map.html
templates/markdown/: markdown.html
templates/profile/: country-m.html  country.html  edit-valute.html  profile-m.html  profile.html
templates/specific/: error.html
templates/valutes/: valute-m.html  valute.html  valutes-m.html  valutes.html
