[tool.poetry]
name = "site"
version = "0.1"
description = "The site of OUVC."
authors = ["Matvey Buldakov <m.buldakov10min@gmail.com>"]
license = "MIT-License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.2"
requests = "2.28.1"
markdown = "3.4.3"
markdownify = "0.11.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
